Fixe spacing of header

--- a/web/homepage.css
+++ b/web/homepage.css
@@ -93,6 +93,7 @@ p {
   z-index: 1;
   bottom: 100%;
   left: 50%;
+  margin-left: -100px;
 }
 
 
